--- a/curso_de_java/Jenkinsfile
+++ b/curso_de_java/Jenkinsfile
@@ -2,6 +2,13 @@ pipeline {
     agent any
 
     stages {
+
+        stage('Clone') {
+            steps {
+                git 'https://github.com/jmanufa01/java_indra.git'
+            }
+        }
+
         stage('Run') {
             steps {
                     dir('/var/jenkins_home/workspace/ejercicio Usuario jenkins/curso_de_java') {
