--- a/curso_de_java/Jenkinsfile
+++ b/curso_de_java/Jenkinsfile
@@ -3,16 +3,11 @@ pipeline {
 
     stages {
 
-        stage('Clone') {
-            steps {
-                git 'https://github.com/jmanufa01/java_indra.git'
-            }
-        }
 
         stage('Run') {
             steps {
                     dir('/var/jenkins_home/workspace/ejercicio Usuario jenkins/curso_de_java') {
-                        sh 'ls -la'
+                        sh 'cat ./empleados.txt'
                     }
             }
         }
