--- a/curso_de_java/Jenkinsfile
+++ b/curso_de_java/Jenkinsfile
@@ -3,55 +3,55 @@ pipeline {
     stages {
         stage('Run') {
             steps {
-                echo """TituloPelicula=Avatar\
-CantidadEspectadores=50000\
-CantidadSalas=5000\
-GananciaBruta=250000000\
+                printf """TituloPelicula=Avatar\n
+CantidadEspectadores=50000\n
+CantidadSalas=5000\n
+GananciaBruta=250000000\n
 GananciaNeta=2.0E8"""
-                echo """TituloPelicula=Avengers: Endgame\
-CantidadEspectadores=45000\
-CantidadSalas=4500\
-GananciaBruta=202500000\
+                printf """TituloPelicula=Avengers: Endgame\n
+CantidadEspectadores=45000\n
+CantidadSalas=4500\n
+GananciaBruta=202500000\n
 GananciaNeta=1.62E8"""
-                echo """TituloPelicula=Avatar: The Way of Water\
-CantidadEspectadores=40000\
-CantidadSalas=4000\
-GananciaBruta=160000000\
+                printf """TituloPelicula=Avatar: The Way of Water\n
+CantidadEspectadores=40000\n
+CantidadSalas=4000\n
+GananciaBruta=160000000\n
 GananciaNeta=1.28E8"""
-                echo """TituloPelicula=Titanic\
-CantidadEspectadores=35000\
-CantidadSalas=3500\
-GananciaBruta=122500000\
+                printf """TituloPelicula=Titanic\n
+CantidadEspectadores=35000\n
+CantidadSalas=3500\n
+GananciaBruta=122500000\n
 GananciaNeta=9.8E7"""
-                echo """TituloPelicula=Star Wars: Episode VII - The Force Awakens\
-CantidadEspectadores=30000\
-CantidadSalas=3000\
-GananciaBruta=90000000\
+                printf """TituloPelicula=Star Wars: Episode VII - The Force Awakens\n
+CantidadEspectadores=30000\n
+CantidadSalas=3000\n
+GananciaBruta=90000000\n
 GananciaNeta=7.2E7"""
-                echo """TituloPelicula=Avengers: Infinity War\
-CantidadEspectadores=25000\
-CantidadSalas=2500\
-GananciaBruta=62500000\
+                printf """TituloPelicula=Avengers: Infinity War\n
+CantidadEspectadores=25000\n
+CantidadSalas=2500\n
+GananciaBruta=62500000\n
 GananciaNeta=5.0E7"""
-                echo """TituloPelicula=Spider-Man: No Way Home\
-CantidadEspectadores=20000\
-CantidadSalas=2000\
-GananciaBruta=40000000\
+                printf """TituloPelicula=Spider-Man: No Way Home\n
+CantidadEspectadores=20000\n
+CantidadSalas=2000\n
+GananciaBruta=40000000\n
 GananciaNeta=3.2E7"""
-                echo """TituloPelicula=Jurassic World\
-CantidadEspectadores=15000\
-CantidadSalas=1500\
-GananciaBruta=22500000\
+                printf """TituloPelicula=Jurassic World\n
+CantidadEspectadores=15000\n
+CantidadSalas=1500\n
+GananciaBruta=22500000\n
 GananciaNeta=1.8E7"""
-                echo """TituloPelicula=The Lion King\
-CantidadEspectadores=10000\
-CantidadSalas=1000\
-GananciaBruta=10000000\
+                printf """TituloPelicula=The Lion King\n
+CantidadEspectadores=10000\n
+CantidadSalas=1000\n
+GananciaBruta=10000000\n
 GananciaNeta=8000000.0"""
-                echo """TituloPelicula=The Avengers\
-CantidadEspectadores=5000\
-CantidadSalas=500\
-GananciaBruta=2500000\
+                printf """TituloPelicula=The Avengers\n
+CantidadEspectadores=5000\n
+CantidadSalas=500\n
+GananciaBruta=2500000\n
 GananciaNeta=2000000.0"""
             }
         }
